[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/starry_background.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/buttons/play.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/buttons/sound_button.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/buttons/credits_button.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/PressStart2P.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/menu.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/16bfZX.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Menu" type="Node"]
script = ExtResource( 6 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 240, 135 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBox0" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -472.0
margin_right = -8.0
margin_bottom = 32.0
alignment = 2

[node name="Hiscore" type="Label" parent="HBox0"]
margin_left = 310.0
margin_top = 5.0
margin_right = 464.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 2

[node name="Center0" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="V0" type="VBoxContainer" parent="Center0"]
margin_left = 160.0
margin_top = 66.0
margin_right = 320.0
margin_bottom = 204.0

[node name="C1" type="CenterContainer" parent="Center0/V0"]
margin_right = 160.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="Center0/V0/C1"]
margin_right = 160.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "We All Die"

[node name="C2" type="CenterContainer" parent="Center0/V0"]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 92.0

[node name="Play" type="TextureButton" parent="Center0/V0/C2"]
margin_left = 8.0
margin_right = 152.0
margin_bottom = 72.0
texture_normal = ExtResource( 2 )
stretch_mode = 2

[node name="C3" type="CenterContainer" parent="Center0/V0"]
margin_top = 96.0
margin_right = 160.0
margin_bottom = 138.0

[node name="H0" type="HBoxContainer" parent="Center0/V0/C3"]
margin_left = 36.0
margin_right = 124.0
margin_bottom = 42.0

[node name="Sound" type="TextureButton" parent="Center0/V0/C3/H0"]
margin_right = 42.0
margin_bottom = 42.0
texture_normal = ExtResource( 3 )

[node name="Credits" type="TextureButton" parent="Center0/V0/C3/H0"]
margin_left = 46.0
margin_right = 88.0
margin_bottom = 42.0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="Center0/V0/C2/Play" to="." method="_on_Play_pressed"]
